# pos-inteligente-sv

./: .cursorrules  .env.example  CLAUDE-architecture.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
backend/: .air.toml  .gitignore  .golangci.yml  Dockerfile  README.md  go.mod  go.sum  server.go
desktop/: README.md  components.json  (+7 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  main-window.json  sale-window.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial_tables.sql
desktop/src-tauri/scripts/: README.md  run_seeder.sh  seed.rs  seed.sql
desktop/src-tauri/src/: ARCHITECTURE.md  commands.rs  database.rs  dte_signer.rs  error.rs  lib.rs  secure_storage.rs
desktop/src-tauri/src/commands/: README.md  auth.rs  database.rs  dte.rs  mod.rs  secure_storage.rs  system.rs  utils.rs
desktop/src-tauri/src/domains/: mod.rs
desktop/src-tauri/src/domains/customers/: commands.rs  mod.rs  repository.rs
desktop/src-tauri/src/domains/dte/: commands.rs  mod.rs  service.rs
desktop/src-tauri/src/domains/products/: commands.rs  mod.rs  repository.rs
desktop/src-tauri/src/domains/sales/: commands.rs  mod.rs  repository.rs
desktop/src-tauri/src/domains/settings/: commands.rs  mod.rs  repository.rs
desktop/src-tauri/src/domains/users/: commands.rs  mod.rs  repository.rs
desktop/src-tauri/src/infrastructure/: database.rs  mod.rs
desktop/src-tauri/src/plugins/: README.md  log_config.rs  mod.rs  sql_config.rs  storage_config.rs
desktop/src-tauri/src/services/: README.md  database.rs  dte_signer.rs  mod.rs  secure_storage.rs
(+251 files in other folders)
