[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["mcalero11"]
edition = "2021"
default-run = "desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "seed"
path = "scripts/seed.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-opener = "2.3"
tauri-plugin-stronghold = "2.2"
tauri-plugin-shell = "2.2"
argon2 = "0.5"
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tauri-plugin-log = "2.5.0"
log = "0.4"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
